Added 'ad-hoc' SSL context. This is a band-aid, it still needs to be done properly'
