# python-flask-server/swagger_server/models/subsidy.py
@@ -19,7 +19,7 @@ class Subsidy(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, id: str=None, name: str=None, master: MasterAccountBase=None, recipient: CitizenBase=None, account: AccountBase=None, frequency: str=None, amount: float=None, startdate: date=None, enddate: date=None, comment: str=None):  # noqa: E501
+    def __init__(self, id: str=None, name: str=None, master: MasterAccountBase=None, recipient: CitizenBase=None, account: AccountBase=None, frequency: str=None, amount: float=None, start_date: date=None, end_date: date=None, comment: str=None, status: str=None):  # noqa: E501
         """Subsidy - a model defined in Swagger
 
         :param id: The id of this Subsidy.  # noqa: E501
@@ -36,12 +36,14 @@ class Subsidy(Model):
         :type frequency: str
         :param amount: The amount of this Subsidy.  # noqa: E501
         :type amount: float
-        :param startdate: The startdate of this Subsidy.  # noqa: E501
-        :type startdate: date
-        :param enddate: The enddate of this Subsidy.  # noqa: E501
-        :type enddate: date
+        :param start_date: The start_date of this Subsidy.  # noqa: E501
+        :type start_date: date
+        :param end_date: The end_date of this Subsidy.  # noqa: E501
+        :type end_date: date
         :param comment: The comment of this Subsidy.  # noqa: E501
         :type comment: str
+        :param status: The status of this Subsidy.  # noqa: E501
+        :type status: str
         """
         self.swagger_types = {
             'id': str,
@@ -51,9 +53,10 @@ class Subsidy(Model):
             'account': AccountBase,
             'frequency': str,
             'amount': float,
-            'startdate': date,
-            'enddate': date,
-            'comment': str
+            'start_date': date,
+            'end_date': date,
+            'comment': str,
+            'status': str
         }
 
         self.attribute_map = {
@@ -64,9 +67,10 @@ class Subsidy(Model):
             'account': 'account',
             'frequency': 'frequency',
             'amount': 'amount',
-            'startdate': 'startdate',
-            'enddate': 'enddate',
-            'comment': 'comment'
+            'start_date': 'start_date',
+            'end_date': 'end_date',
+            'comment': 'comment',
+            'status': 'status'
         }
 
         self._id = id
@@ -76,9 +80,10 @@ class Subsidy(Model):
         self._account = account
         self._frequency = frequency
         self._amount = amount
-        self._startdate = startdate
-        self._enddate = enddate
+        self._start_date = start_date
+        self._end_date = end_date
         self._comment = comment
+        self._status = status
 
     @classmethod
     def from_dict(cls, dikt) -> 'Subsidy':
@@ -241,46 +246,46 @@ class Subsidy(Model):
         self._amount = amount
 
     @property
-    def startdate(self) -> date:
-        """Gets the startdate of this Subsidy.
+    def start_date(self) -> date:
+        """Gets the start_date of this Subsidy.
 
 
-        :return: The startdate of this Subsidy.
+        :return: The start_date of this Subsidy.
         :rtype: date
         """
-        return self._startdate
+        return self._start_date
 
-    @startdate.setter
-    def startdate(self, startdate: date):
-        """Sets the startdate of this Subsidy.
+    @start_date.setter
+    def start_date(self, start_date: date):
+        """Sets the start_date of this Subsidy.
 
 
-        :param startdate: The startdate of this Subsidy.
-        :type startdate: date
+        :param start_date: The start_date of this Subsidy.
+        :type start_date: date
         """
 
-        self._startdate = startdate
+        self._start_date = start_date
 
     @property
-    def enddate(self) -> date:
-        """Gets the enddate of this Subsidy.
+    def end_date(self) -> date:
+        """Gets the end_date of this Subsidy.
 
 
-        :return: The enddate of this Subsidy.
+        :return: The end_date of this Subsidy.
         :rtype: date
         """
-        return self._enddate
+        return self._end_date
 
-    @enddate.setter
-    def enddate(self, enddate: date):
-        """Sets the enddate of this Subsidy.
+    @end_date.setter
+    def end_date(self, end_date: date):
+        """Sets the end_date of this Subsidy.
 
 
-        :param enddate: The enddate of this Subsidy.
-        :type enddate: date
+        :param end_date: The end_date of this Subsidy.
+        :type end_date: date
         """
 
-        self._enddate = enddate
+        self._end_date = end_date
 
     @property
     def comment(self) -> str:
@@ -302,3 +307,30 @@ class Subsidy(Model):
         """
 
         self._comment = comment
+
+    @property
+    def status(self) -> str:
+        """Gets the status of this Subsidy.
+
+
+        :return: The status of this Subsidy.
+        :rtype: str
+        """
+        return self._status
+
+    @status.setter
+    def status(self, status: str):
+        """Sets the status of this Subsidy.
+
+
+        :param status: The status of this Subsidy.
+        :type status: str
+        """
+        allowed_values = ["PENDING_APPROVAL", "PENDING_CONNECTION", "OPEN", "CLOSED", "CONNECTION_FAILED"]  # noqa: E501
+        if status not in allowed_values:
+            raise ValueError(
+                "Invalid value for `status` ({0}), must be one of {1}"
+                .format(status, allowed_values)
+            )
+
+        self._status = status
